# shadowsocksr-native

./: .gitignore  .gitmodules  .travis.yml  .uncrustify.cfg  CMakeLists.txt  Changes  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  ar-lib  config.h.cmake  config.h.in  config.json  configure  configure.ac  depcomp  encrypt.c  encrypt.h  install-sh  jconf.c  jconf.h  json.c  local.c  local.h  main.c  main.h  mi.pac  missing  server.c  server.h  shadowsocks-libev.8  shadowsocks-libev.pc.in  shadowsocks.8  shadowsocks.pc.in  socks5.h  ss-manager.1  ss-redir.1  utils.c  (+1 more)
.github/: issue_template.md
Doc/: ss-local.asciidoc
acl/: chn.acl  gfwlist.acl  local.acl  server_block_chn.acl
cmake/: FindPCRE.cmake  configure.cmake
debian/: .gitignore  README.Debian  autopkg.sh  changelog  control  copyright  docs  files  install  libshadowsocks-dev.install  libshadowsocks-libev-dev.install  libshadowsocks-libev1.install  libshadowsocks1.install  libshadowsocks1.symbols  rules  shadowsocks-libev-local@.service  shadowsocks-libev-redir@.service  shadowsocks-libev-server@.service  shadowsocks-libev-tunnel@.service  shadowsocks-libev.default  shadowsocks-libev.init  shadowsocks-libev.install  shadowsocks-libev.postinst  shadowsocks-libev.service  shadowsocks.default  shadowsocks.init  shadowsocks.substvars  ss-rule
depends/pthreads4w/: .gitignore  CMakeLists.txt  ChangeLog  Makefile  NOTICE  _ptw32.h  dll.c  implement.h
depends/pthreads4w/manual/: ChangeLog  PortabilityIssues.html  cpu_set.html  index.html  pthreadCancelableWait.html  pthread_attr_init.html  pthread_attr_setstackaddr.html  pthread_attr_setstacksize.html  pthread_barrier_init.html  pthread_barrier_wait.html  pthread_barrierattr_init.html  pthread_barrierattr_setpshared.html  pthread_cancel.html  pthread_cleanup_push.html  pthread_cond_init.html  pthread_condattr_init.html  pthread_condattr_setpshared.html  pthread_create.html  pthread_delay_np.html  pthread_detach.html  pthread_getunique_np.html  pthread_getw32threadhandle_np.html  pthread_join.html  pthread_key_create.html  pthread_kill.html  pthread_mutex_init.html  pthread_mutexattr_init.html  pthread_mutexattr_setpshared.html  pthread_num_processors_np.html  pthread_once.html  pthread_rwlock_init.html  pthread_rwlock_rdlock.html  pthread_rwlock_timedrdlock.html  pthread_rwlock_timedwrlock.html  pthread_rwlock_unlock.html  pthread_rwlock_wrlock.html  pthread_rwlockattr_init.html  pthread_rwlockattr_setpshared.html  pthread_self.html  pthread_setaffinity_np.html  (+17 more)
depends/pthreads4w/tests/: Bmakefile  ChangeLog  GNUmakefile.in  Makefile  README  Wmakefile  affinity1.c  affinity2.c  affinity3.c  affinity4.c  affinity5.c  affinity6.c  barrier1.c  barrier2.c  barrier3.c  barrier4.c  barrier5.c  barrier6.c  benchlib.c  benchtest.h  benchtest1.c  benchtest2.c  benchtest3.c  benchtest4.c  benchtest5.c  cancel1.c  cancel2.c  cancel3.c  cancel4.c  cancel5.c  cancel6a.c  cancel6d.c  cancel7.c  cancel8.c  cancel9.c  cleanup0.c  cleanup1.c  cleanup2.c  cleanup3.c  common.mk  (+124 more)
depends/pthreads4w/win32/: pthreads.sln  pthreads.vcxproj  pthreads.vcxproj.filters  test.c  test.vcxproj  test.vcxproj.filters
depends/zlib/staticbuild/: CMakeLists.txt
doc/: Makefile.am  Makefile.in  asciidoc.conf  shadowsocks-libev.asciidoc  ss-local.asciidoc  ss-manager.asciidoc  ss-redir.asciidoc  ss-server.asciidoc  ss-tunnel.asciidoc
docker/: Dockerfile
install/: ibmcloud.sh  ssr-daemon.sh  ssrn-install.sh  ssrn-ot-install-ipv6.sh  ssrn-ot-install.sh  update-server.sh
libasyncns/: Makefile.am  Makefile.in  asyncns.c  asyncns.h
libcork/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
libcork/cli/: commands.c
libcork/core/: allocator.c  error.c  gc.c  ip-address.c  mempool.c  timestamp.c  u128.c
libcork/ds/: array.c  bitset.c  buffer.c  file-stream.c  hash-table.c  managed-buffer.c  ring-buffer.c  slice.c
libcork/include/: CMakeLists.txt
libcork/include/libcork/config/: config.h  gcc.h  mingw32.h  solaris.h
libcork/include/libcork/core/: allocator.h  api.h  attributes.h  callbacks.h  error.h  hash.h  mempool.h  types.h  u128.h
libcork/include/libcork/ds/: bitset.h
libcork/include/libcork/os/: subprocess.h
libcork/include/libcork/threads/: atomics.h  basics.h
libcork/posix/: env.c  exec.c  files.c  process.c  subprocess.c
libcork/pthreads/: thread.c
libev/: CMakeLists.txt  Makefile.am  Makefile.in  aclocal.m4  configure.ac  ev.3  ev.c  ev.pod
libipset/: Makefile  Makefile.am  Makefile.in
libsodium/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  configure  configure.ac  libsodium.vcxproj
libudns/: CMakeLists.txt  Makefile.am  Makefile.in  inet_XtoX.c  rblcheck.c  udns.h  udns_XtoX.c  udns_dn.c  udns_init.c  udns_parse.c  udns_resolver.c  udns_rr_txt.c
m4/: inet_aton.m4  inet_ntoa.m4  inet_ntop.m4  libtool.m4  ltversion.m4  mbedtls.m4  openssl.m4  pcre.m4
man/: shadowsocks-libev.8  ss-local.1  ss-manager.1  ss-nat.1  ss-redir.1  ss-server.1  ss-tunnel.1
openwrt/: Makefile
rpm/: genrpm.sh
src/: CMakeLists.txt  Makefile.am  Makefile.in  acl.c  acl.h  aead.c  aead.h  android.c  android.cpp  android.h  auth.c  auth.h  base64.c  cache.c  cache.h  cmd_line_parser.c  cmd_line_parser.h  common.h  config_json.c  config_json.h  crc32.c  daemon_wrapper.c  daemon_wrapper.h  dump_info.c  dump_info.h  encrypt.c  encrypt.h  exe_file_path.c  exe_file_path.h  hmac-sha1.c  hmac-sha1.h  http.c  http.h  http_simple.c  http_simple.h  include.h  includeobfs.h  ip_addr_cache.c  ip_addr_cache.h  jconf.c  (+71 more)
src/client/: client.c  defs.h  listener.c  main.c  s5.c  s5.h  ssr_client_api.h  ssrcipher.c  ssrcipher.h  tls_cli.c  tls_cli.h  tls_cli2.c  tunnel.c  util.c  util.h
src/obfs/: auth.c  auth.h  auth_chain.c  auth_chain.h  base64.c  base64.h  crc32.c  crc32.h  cstl_lib.c  cstl_lib.h  http_simple.c  http_simple.h  obfs.c  obfs.h  obfsutil.c  obfsutil.h  tls1.2_ticket.c  tls1.2_ticket.h  verify.c  verify.h
src/server/: server.c  traffic_audit.c  traffic_audit.h
win32/: .gitignore  readme.md  ssr-libev.sln  ssr-native-lib.sln  ssr-native.sln  ssr-old.sln
(+110 files in other folders)
