bin_PROGRAMS = ss-local ss-server
ss_local_SOURCES = src/utils.c src/jconf.c src/json.c \
			 src/rc4.c src/md5.c src/encrypt.c \
			 src/local.c
ss_server_SOURCES = src/utils.c src/jconf.c src/json.c \
			 src/rc4.c src/md5.c src/encrypt.c \
			 src/server.c
AM_CFLAGS  = -O2 -Wall -fno-strict-aliasing 
ACLOCAL_AMFLAGS = -I m4
